# BuyBot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.bat  start_server.py
.qwen/: settings.json  settings.json.orig
app/: main.py
prompts/: moderation.txt  rag_agent.txt  recipe_writer.txt  writer.txt
scripts/: ingest_csv.py
src/agents/: __init__.py  graph.py  rag_agent.py  recipe_agent.py  registry.py  router_agent.py  search_agent.py  state.py  writer.py
src/api/: routes.py  schemas.py
src/config/: llm.py  settings.py
src/ingestion/: vector_store.py
src/models/: schemas.py
src/tools/: vector_search.py
src/utils/: logger.py
tests/: __init__.py  conftest.py
